// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PDF loader from file 1`] = `
"_grp: 1
_type: constructor
_id:
  - input
  - load
  - docs
  - pdf
_kwargs: {}
"
`;

exports[`test PDF loader from file to single document 1`] = `
"_grp: 1
_type: constructor
_id:
  - input
  - load
  - docs
  - pdf
_kwargs:
  should_split: false
"
`;
